--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
@@ -1,46 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-	<top>
-		<StackPane fx:id="headerPane" />
-	</top>
-	<center>
-		<StackPane fx:id="bodyPane" />
-	</center>
-	<bottom>
-		<VBox>
-   			<children>
-   			<StackPane fx:id="footerPane" />
-            <BorderPane>
-               <left>
-              		<HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
-              			<children>
-							<Button fx:id="saveSplitMenuButton" text="%Button.versionBulletin" onAction="#onSaveBulletin" styleClass="split-menu-button" />
-				        	<Button onAction="#onVersionBulletin" text="%Button.createBulletinCopy" styleClass="split-menu-button" />
-						</children>
-					</HBox>
-               </left>
-               <right>
-         			<HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
-            			<children>
-            				<CheckBox fx:id="immutableOnServer" mnemonicParsing="false" text="%NeverDeleteVersionOnServer" />
-            				<Button fx:id="shareButton" onAction="#onShareBulletin" text="%Button.shareBulletin" styleClass="defaultButton" >
-								<tooltip>
-                      				<Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.Share" />
-					  			</tooltip>
-            				</Button>
-            				<Button onAction="#onCancel" text="%Button.Cancel" BorderPane.alignment="CENTER" styleClass="cancelButton" />
-            			</children>
-         			</HBox>
-               </right>
-            </BorderPane>
-  			</children>
-		</VBox>
-	</bottom>
+    <top>
+        <VBox>
+            <HBox alignment="CENTER" styleClass="background-blue">
+                <Label styleClass="headingLevel5" text="%CreateRecord" />
+            </HBox>
+            <HBox alignment="CENTER_RIGHT">
+                <padding>
+                    <Insets top="10" right="20" bottom="10" />
+                </padding>
+                <children>
+                    <Button fx:id="immutableOnServerButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onImmutable">
+                        <graphic>
+                            <ImageView fx:id="immutableOnServerImageView" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="@../../images/toggle_off.png" />
+                                </image>
+                            </ImageView>
+                        </graphic>
+                        <styleClass>
+                            <String fx:value="button-minpadding" />
+                            <String fx:value="button-transparentNoHover" />
+                        </styleClass>
+                    </Button>
+                    <Label contentDisplay="CENTER" styleClass="headingLevel6" text="%NeverDeleteVersionOnServer" />
+                </children>
+            </HBox>
+        </VBox>
+    </top>
+    <center>
+        <BorderPane>
+            <padding>
+                <Insets left="20" right="20" bottom="10" />
+            </padding>
+            <top>
+                <StackPane fx:id="headerPane" />
+            </top>
+            <center>
+                <StackPane fx:id="bodyPane" />
+            </center>
+            <bottom>
+                <VBox>
+                    <children>
+                        <StackPane fx:id="footerPane" />
+                        <BorderPane>
+                            <left>
+                                <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
+                                    <children>
+                                        <Button fx:id="saveSplitMenuButton" text="%Button.versionBulletin" onAction="#onSaveBulletin" styleClass="button-green" />
+                                        <Button onAction="#onVersionBulletin" text="%Button.createBulletinCopy" styleClass="split-menu-button" />
+                                    </children>
+                                </HBox>
+                            </left>
+                            <right>
+                                <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER">
+                                    <children>
+                                        <Button fx:id="shareButton" onAction="#onShareBulletin" text="%Button.shareBulletin" styleClass="button-green" >
+                                            <tooltip>
+                                                <Tooltip anchorLocation="WINDOW_TOP_LEFT" text="%Tooltip.Share" />
+                                            </tooltip>
+                                        </Button>
+                                        <Button onAction="#onCancel" text="%Button.Cancel" BorderPane.alignment="CENTER" styleClass="button-gray" />
+                                    </children>
+                                </HBox>
+                            </right>
+                        </BorderPane>
+                    </children>
+                </VBox>
+            </bottom>
+        </BorderPane>
+    </center>
 </BorderPane>
