MARTUSDEV-1854: Move template selection to choice list and change add contacts button

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -347,3 +347,11 @@
 .background-blue {
     -fx-background-color: #3B92E4;
 }
+
+.background-grey {
+    -fx-background-color:#e6e6e6;
+}
+
+.background-white {
+    -fx-background-color: #FFFFFF;
+}
