--- a/martus-client/source/org/martus/client/swingui/jfx/css/Bulletin.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Bulletin.css
@@ -72,8 +72,8 @@ Scene {
 }
 
 .systemFieldTitle {	
-	-fx-font-size: 15px;
-	-fx-text-fill: #405980;
+	-fx-font-size: 20px;
+	-fx-text-fill: #3f3f3f;
 	-fx-font-weight: bold;
 	-fx-text-alignment:left;
 	-fx-padding:5 0 5 0;
@@ -105,10 +105,9 @@ Scene {
      -fx-text-fill: black;
  }
 
-
-.headerFieldBox {
-	-fx-padding:0 10 0 10;
-	-fx-background-color:#FFFFFF;
+.border-gray {
+    -fx-border-color: #bdbdbd;
+    -fx-border-width: 1;
 }
 
 .headerButtonHBox {
