--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorHeader.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorHeader.fxml
@@ -7,109 +7,71 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane styleClass="background" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <top>
-  	  <VBox styleClass="titleBox">
-     <children>
-         <Label fx:id="headerTitleLabel" alignment="CENTER" styleClass="titleText" text="[New {Record/Note} / Title of Message]" BorderPane.alignment="CENTER">
-      </Label>
-     </children>
-      </VBox>
-   </top>
-   <center>
-      <VBox prefHeight="110.0" styleClass="headerFieldBox" BorderPane.alignment="CENTER">
-		<children>
-            <Separator prefWidth="200.0">
-			<VBox.margin>
-				<Insets bottom="5.0" />
-			</VBox.margin>
-            </Separator>
-            <GridPane alignment="CENTER_LEFT" prefWidth="920.0">
-				<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="200" minWidth="50" prefWidth="150" />
-				<ColumnConstraints hgrow="ALWAYS" minWidth="300" prefWidth="770" />
-				</columnConstraints>
-				<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				</rowConstraints>
-				<children>
-				
-				<!--Column 1 -->
-                  <Label styleClass="systemFieldTitle" text="%RecordTitle" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                  <Label styleClass="systemFieldTitle" text="%To" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                  
-                  <!-- Column 2 -->
-                  <TextField fx:id="titleField" styleClass="systemTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-          
-				  <GridPane minWidth="280" prefWidth="750" GridPane.columnIndex="1" GridPane.rowIndex="1">
-					<columnConstraints>
-						<ColumnConstraints hgrow="ALWAYS" minWidth="250.0" prefWidth="700.0" />
-                        <ColumnConstraints />
-					</columnConstraints>
-					<rowConstraints>
-					<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-					</rowConstraints>
-					<children>
-                        <Button fx:id="addRemoveContact" mnemonicParsing="false" onAction="#onAddRemoveContact" styleClass="button-transparentWithHover" GridPane.columnIndex="1" GridPane.rowIndex="0">
-							<graphic>
-                              <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-								<image>
-								<Image url="@../../images/add_contact.png" />
-								</image>
-                              </ImageView>
-							</graphic>
-							<GridPane.margin>
-                              <Insets right="1.0" />
-                           </GridPane.margin>
-                           <tooltip>
-                              <Tooltip anchorLocation="WINDOW_TOP_RIGHT" text="%Tooltip.AddContact" />
-                           </tooltip>
-                        </Button>
-                        <Label fx:id="toField" />
-                  </children>
-          		</GridPane>
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+    <center>
+        <VBox styleClass="background-grey" BorderPane.alignment="CENTER">
+            <children>
+                <HBox>
+                    <HBox styleClass="background-dark-grey">
+                        <padding>
+                            <Insets left="15" right="15" />
+                        </padding>
+                        <children>
+                            <Label text="%SelectTemplate" styleClass="headingLevel5" />
+                        </children>
+                    </HBox>
+                    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+                        <ChoiceBox fx:id="availableTemplates" maxWidth="Infinity" HBox.hgrow="ALWAYS" />
+                    </HBox>
+                </HBox>
 
-				<GridPane minWidth="280" prefWidth="750" GridPane.columnIndex="1" GridPane.rowIndex="2">
-					<columnConstraints>
-						<ColumnConstraints hgrow="ALWAYS" minWidth="250.0" prefWidth="500.0" />
-						<ColumnConstraints hgrow="SOMETIMES" minWidth="75.0" prefWidth="200.0" />
-						
-                        <ColumnConstraints />
-					</columnConstraints>
-					<rowConstraints>
-					<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-					</rowConstraints>
-					<children>
-                        
-                        <HBox alignment="CENTER_RIGHT" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
-                           <children>
-                               <Button mnemonicParsing="false" onAction="#onSelectTemplate" styleClass="button-transparentWithHover">
-   								<graphic>
-                           		<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-   									<image>
-   									<Image url="@../../images/template_manager.png" />
-   									</image>
-                               	</ImageView>
-   								</graphic>
-   								<GridPane.margin>
-                                 		<Insets right="1.0" />
-                             		</GridPane.margin>
-                                 <tooltip>
-                                    <Tooltip anchorLocation="WINDOW_TOP_RIGHT" text="%Tooltip.TemplateSelector" />
-                                 </tooltip>
-                              </Button>
-                           </children>
-						 </HBox>
-                      </children>
-					</GridPane>
-					
-				</children>
-			</GridPane>
-			
-			</children>
-		</VBox>
-		
- 	</center>
- 	
- </BorderPane>
+                <HBox styleClass="border-gray">
+                    <padding>
+                        <Insets left="20" top="20" right="20" bottom="20" />
+                    </padding>
+                    <children>
+                        <GridPane alignment="CENTER" vgap="20" HBox.hgrow="ALWAYS">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="200" minWidth="50" prefWidth="150" />
+                                <ColumnConstraints hgrow="ALWAYS" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+
+                            <children>
+
+                                <!--Column 1 -->
+                                <Label styleClass="systemFieldTitle" text="%RecordTitle" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                                <Label styleClass="systemFieldTitle" text="%To" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+
+                                <!-- Column 2 -->
+                                <TextField fx:id="titleField" styleClass="systemTextField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                                <HBox styleClass="background-white" GridPane.columnIndex="1" GridPane.rowIndex="1" alignment="CENTER_LEFT">
+                                    <children>
+                                        <Button fx:id="addRemoveContact" mnemonicParsing="false" onAction="#onAddRemoveContact" styleClass="button-transparentWithHover">
+                                            <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                                    <image>
+                                                        <Image url="@../../images/manage_contacts.png" />
+                                                    </image>
+                                                </ImageView>
+                                            </graphic>
+                                            <tooltip>
+                                                <Tooltip anchorLocation="WINDOW_TOP_RIGHT" text="%Tooltip.AddContact" />
+                                            </tooltip>
+                                        </Button>
+                                        <Label fx:id="toField" />
+                                    </children>
+                                </HBox>
+
+                            </children>
+                        </GridPane>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </center>
+</BorderPane>
