MARTUSDEV-1855: Extend the folders list

--- a/martus-client/source/org/martus/client/swingui/jfx/landing/cases/CaseManagement.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/cases/CaseManagement.fxml
@@ -62,7 +62,7 @@
                 </HBox>
             </right>
         </BorderPane>
-        <ListView fx:id="casesListViewAll" onMouseClicked="#onCaseListMouseClicked" prefWidth="300.0" />
+        <ListView fx:id="casesListViewAll" onMouseClicked="#onCaseListMouseClicked" prefWidth="300.0" VBox.vgrow="ALWAYS" />
         <BorderPane>
             <left>
                 <HBox BorderPane.alignment="CENTER">
