--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorFooter.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorFooter.fxml
@@ -7,21 +7,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane styleClass="background" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <VBox BorderPane.alignment="CENTER">
             <children>
-                <BorderPane>
-                    <left>
-                        <Hyperlink onAction="#onShowBulletinDetails" text="%BulletinDetails" BorderPane.alignment="CENTER" />
-                    </left>
-                    <right>
-                        <ComboBox fx:id="historyItems" onAction="#onShowVersion" promptText="%BulletinDetailsHistory" BorderPane.alignment="CENTER" />
-                    </right>
-                    <padding>
-                        <Insets left="10.0" right="10.0" />
-                    </padding>
-                </BorderPane>
+                <HBox>
+                    <HBox styleClass="background-dark-grey">
+                        <padding>
+                            <Insets left="15" right="15" />
+                        </padding>
+                        <children>
+                            <Label text="%RecordHistory" styleClass="headingLevel5" />
+                        </children>
+                    </HBox>
+                    <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+                        <ComboBox fx:id="historyItems" onAction="#onShowVersion" promptText="%BulletinDetailsHistory" maxWidth="Infinity" HBox.hgrow="ALWAYS" styleClass="dropdown-list" />
+                    </HBox>
+                </HBox>
             </children>
             <padding>
                 <Insets bottom="10.0" top="10.0" />
