--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
@@ -11,32 +12,37 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <VBox>
             <HBox alignment="CENTER" styleClass="background-blue">
                 <Label styleClass="headingLevel5" text="%CreateRecord" />
             </HBox>
-            <HBox alignment="CENTER_RIGHT">
+            <HBox>
                 <padding>
-                    <Insets top="10" right="20" bottom="10" />
+                    <Insets left="20" top="10" right="20" bottom="10" />
                 </padding>
                 <children>
-                    <Button fx:id="immutableOnServerButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onImmutable">
-                        <graphic>
-                            <ImageView fx:id="immutableOnServerImageView" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../../images/toggle_off.png" />
-                                </image>
-                            </ImageView>
-                        </graphic>
-                        <styleClass>
-                            <String fx:value="button-minpadding" />
-                            <String fx:value="button-transparentNoHover" />
-                        </styleClass>
-                    </Button>
-                    <Label contentDisplay="CENTER" styleClass="headingLevel6" text="%NeverDeleteVersionOnServer" />
+                    <HBox>
+                        <Hyperlink onAction="#onShowBulletinDetails" text="%BulletinDetails" styleClass="link-noHover" />
+                    </HBox>
+                    <HBox HBox.hgrow="ALWAYS" />
+                    <HBox>
+                        <Button fx:id="immutableOnServerButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onImmutable">
+                            <graphic>
+                                <ImageView fx:id="immutableOnServerImageView" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../images/toggle_off.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <styleClass>
+                                <String fx:value="button-minpadding" />
+                                <String fx:value="button-transparentNoHover" />
+                            </styleClass>
+                        </Button>
+                        <Label contentDisplay="CENTER" styleClass="headingLevel6" text="%NeverDeleteVersionOnServer" />
+                    </HBox>
                 </children>
             </HBox>
         </VBox>
