MARTUSDEV-1855: Change main screen table selected/hover background

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -269,13 +269,13 @@
 
 /* Selected row */
 .table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: #4f9ab2;
+    -fx-background-color: #85C1FD;
 }
 
 
 /* Row hovered */
 .table-view:row-selection .table-row-cell:filled:hover {
-	-fx-background-color: #77bad0;
+    -fx-background-color: #85C1FD;
 }
 
 .casesMenu {
