MARTUSDEV-1855: Change main screen table text alignment

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -278,6 +278,10 @@
     -fx-background-color: #85C1FD;
 }
 
+.table-column {
+    -fx-alignment: center;
+}
+
 .casesMenu {
     -fx-text-fill: Black;
     -fx-font-size: 15px;
