MARTUSDEV-1855: Change icon buttons hover background

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Landing.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Landing.css
@@ -74,9 +74,11 @@
 }
 
 .button-transparentWithHover:hover {
+    -fx-background-color: #85C1FD;
 }
 
 .button-transparentWithHover:pressed {
+    -fx-background-color: #85C1FD;
 }
 
 .button-transparentNoHover{
