MARTUSDEV-1849: Change signin labels alignment

--- a/martus-client/source/org/martus/client/swingui/jfx/generic/InitialSignin.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/InitialSignin.fxml
@@ -54,7 +54,7 @@
                                                         <ChoiceBox fx:id="languagesDropdown" GridPane.columnIndex="1" GridPane.rowIndex="2" styleClass="singIn-choice-box" />
                                                     </children>
                                                     <columnConstraints>
-                                                        <ColumnConstraints halignment="RIGHT" />
+                                                        <ColumnConstraints />
                                                         <ColumnConstraints />
                                                     </columnConstraints>
                                                     <rowConstraints>
