MARTUSDEV-1849: Change signin tab border color

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -274,7 +274,7 @@
 .singIn-content {
     -fx-background-color: #e6e6e6;
     -fx-border-width: 1;
-    -fx-border-color: #6a6a6a;
+    -fx-border-color: #737373;
 }
 
 /************/
