--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -1,5 +1,5 @@
 .root {
-  -fx-font-family: "Helvetica";
+  -fx-font-family: "Helvetica Light", Helvetica, sans-serif;
   -fx-line-height: inherit 28px;
  }
 
