--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorShell.fxml
@@ -15,9 +15,7 @@
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <VBox>
-            <HBox alignment="CENTER" styleClass="background-blue">
-                <Label styleClass="headingLevel5" text="%CreateRecord" />
-            </HBox>
+            <HBox alignment="CENTER" styleClass="background-blue" prefHeight="15" />
             <HBox>
                 <padding>
                     <Insets left="20" top="10" right="20" bottom="10" />
