--- a/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorHeader.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/landing/bulletins/BulletinEditorHeader.fxml
@@ -12,7 +12,7 @@
         <VBox styleClass="background-grey" BorderPane.alignment="CENTER">
             <children>
                 <HBox>
-                    <HBox styleClass="background-dark-grey">
+                    <HBox styleClass="background-dark-grey" alignment="CENTER">
                         <padding>
                             <Insets left="15" right="15" />
                         </padding>
