MARTUSDEV-1864: Change cancel button color

--- a/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -152,7 +152,7 @@
     -fx-alignment: center;
     -fx-font-size: 18px;
     -fx-padding: 5 35 5 35;
-    -fx-background-color:#A6A6A6;
+    -fx-background-color:#808080;
 }
 
 .button-transparentNoHover{
