MARTUSDEV-1889: Move import button, add select contact key radioButtons

--- a/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
@@ -11,13 +11,10 @@
       <bottom>
         <BorderPane prefHeight="300" prefWidth="910.0">
           <left>
-          		<Label prefWidth="25.0"></Label>
+            <Label prefWidth="25.0"></Label>
           </left>
-          <center>
-		        <Button mnemonicParsing="false" onAction="#importContactFromFile" prefHeight="35.0" prefWidth="280.0" text="%Button.ImportContactFromFile" BorderPane.alignment="CENTER_LEFT" />
-          </center>
           <right>
-            <Button id="" fx:id="closeButton" mnemonicParsing="false" onAction="#onClose" prefHeight="35.0" prefWidth="280.0" text="%Button.ContactsSaveClose" BorderPane.alignment="CENTER_RIGHT" />
+            <Button id="" fx:id="closeButton" mnemonicParsing="false" onAction="#onClose" prefHeight="35.0" prefWidth="280.0" text="%Button.ContactsSaveClose" BorderPane.alignment="CENTER_RIGHT" styleClass="button-green" />
           </right>
         </BorderPane>
       </bottom>
