--- a/martus-client/source/org/martus/client/swingui/jfx/css/Contacts.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Contacts.css
@@ -71,6 +71,35 @@
 	-fx-padding: 5 35 5 35;
 }
 
+.button-green,
+.button-green:hover,
+.button-green:pressed {
+    -fx-border-radius: 20 20 20 20;
+    -fx-text-fill: White;
+    -fx-alignment: center;
+    -fx-font-size: 15px;
+    -fx-padding: 7 10 7 10;
+    -fx-background-color:#00B050;
+}
+
+.button-gray,
+.button-gray:hover,
+.button-gray:pressed {
+    -fx-border-radius: 20 20 20 20;
+    -fx-text-fill: White;
+    -fx-alignment: center;
+    -fx-font-size: 15px;
+    -fx-padding: 7 35 7 35;
+    -fx-background-color:#808080;
+}
+
+.addContactStepsBorder {
+	-fx-border-color: red;
+	-fx-border-width: 2;
+	-fx-border-style: solid;
+	-fx-padding: 5 5 5 5;
+}
+
 .headingLevel1 {
 	-fx-font-size: 24px;
   -fx-font-weight: bold;
@@ -186,7 +215,7 @@
 }
 
 .table-view {
-  -fx-base: #9ba5ae;
+  -fx-base: #808080;
   -fx-control-inner-background: transparent;
   -fx-background-color: transparent;
   -fx-table-cell-border-color: white;
@@ -194,11 +223,13 @@
   -fx-padding: 5;
 }
 
-
 .table-view .column-header-background {
-    -fx-background-color: #9ba5ae;
+    -fx-background-color: #808080;
 }
 
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
 
 .table-view .column-header {
     -fx-size: 35;
@@ -209,7 +240,7 @@
         derive(-fx-base, 80%)
         transparent;
     -fx-border-insets: 0 5 1 0;
-    -fx-font-size: 11;
+    -fx-font-size: 12;
 }
 
 
