--- a/martus-client/source/org/martus/client/swingui/jfx/contacts/ManageContacts.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/contacts/ManageContacts.fxml
@@ -8,6 +8,28 @@
 
 <VBox fx:id="contactsVbox" prefWidth="860.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
+    <HBox alignment="CENTER">
+      <children>
+        <HBox styleClass="background-blue" HBox.hgrow="ALWAYS">
+          <children>
+            <Label text="%MyAccessToken" styleClass="headingLevel4" />
+            <Label fx:id="accountAccessTokenLabel" styleClass="headingLevel4" />
+          </children>
+        </HBox>
+        <HBox>
+          <children>
+            <Button fx:id="exportPublicKey" text="%Button.ExportPublicKey" onAction="#onExportPublicKey" styleClass="button-gray" />
+          </children>
+          <padding>
+            <Insets left="10" />
+          </padding>
+        </HBox>
+      </children>
+      <padding>
+        <Insets bottom="20" />
+      </padding>
+    </HBox>
+
     <BorderPane>
       <top>
         <fx:define><ToggleGroup fx:id="addContactToggleGroup"/></fx:define>
