--- a/martus-client/source/org/martus/client/swingui/jfx/css/Contacts.css
+++ b/martus-client/source/org/martus/client/swingui/jfx/css/Contacts.css
@@ -121,6 +121,11 @@
 	-fx-padding: 5 3 5 3;
 }
 
+.headingLevel4 {
+	-fx-font-size: 15px;
+	-fx-text-fill: White;
+	-fx-padding: 7 5 7 5;
+}
 
 #topBar {
 	-fx-background-color: #4c5e70;
@@ -366,4 +371,8 @@
 
 .leftMargin {
   -fx-padding: 0 0 0 25;
+}
+
+.background-blue {
+    -fx-background-color: #3B92E4;
 }
