--- a/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/contacts/ContactsShell.fxml
@@ -5,11 +5,9 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="MainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="910.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-  <children>
-    <BorderPane layoutX="0.0" layoutY="0.0" prefWidth="910.0" styleClass="pageMargin">
+    <BorderPane layoutX="0.0" layoutY="0.0" prefWidth="910.0" styleClass="pageMargin" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
       <bottom>
-        <BorderPane prefHeight="300" prefWidth="910.0">
+        <BorderPane prefWidth="910.0">
           <left>
             <Label prefWidth="25.0"></Label>
           </left>
@@ -19,8 +17,6 @@
         </BorderPane>
       </bottom>
       <center>
-        <Pane fx:id="contentPane" maxHeight="-Infinity" prefHeight="408.0" prefWidth="840.0" />
+        <Pane fx:id="contentPane" prefWidth="840.0" />
       </center>
     </BorderPane>
-  </children>
-</AnchorPane>
