--- a/martus-client/source/org/martus/client/swingui/jfx/contacts/ManageContacts.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/contacts/ManageContacts.fxml
@@ -32,9 +32,12 @@
 
     <BorderPane>
       <top>
+       <VBox>
+      	<Label text="%AddContact" wrapText="true" styleClass="label-green" />
         <fx:define><ToggleGroup fx:id="addContactToggleGroup"/></fx:define>
-        <GridPane>
+        <GridPane style="-fx-border-width: 1; -fx-border-style: solid; -fx-border-color:#dbd9d9;">
           <children>
+          
             <RadioButton fx:id="addContactAccessTokenButton" toggleGroup="$addContactToggleGroup" mnemonicParsing="false" selected="true" text="%AccessToken" GridPane.columnIndex="0" GridPane.rowIndex="0" onAction="#updateButtonStatus" />
             <HBox GridPane.columnIndex="1" GridPane.rowIndex="0" alignment="CENTER_LEFT">
               <TextField id="" fx:id="accessTokenField" promptText="%ContactAccessToken" />
@@ -50,6 +53,9 @@
               </children>
             </VBox>
           </children>
+          <padding>
+        	<Insets bottom="5" top="5" right="5" left="5"/>
+      	  </padding>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" />
@@ -60,17 +66,18 @@
             <RowConstraints vgrow="SOMETIMES" valignment="CENTER" />
           </rowConstraints>
         </GridPane>
+        </VBox>
       </top>
       <center>
         <VBox BorderPane.alignment="CENTER">
           <children>
-            <TableView id="contacts-table" fx:id="contactsTable" editable="true" prefHeight="212.0" prefWidth="840.0">
+            <TableView id="contacts-table" fx:id="contactsTable" editable="true" prefHeight="300" prefWidth="840.0">
               <columns>
-                <TableColumn id="" minWidth="10.0" prefWidth="106.0" sortable="true" styleClass="mainText" text="%Button.ContactName" fx:id="contactNameColumn" />
-                <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="160.0" styleClass="tableRow" text="%Button.SendToByDefault" fx:id="sendToByDefaultColumn" />
-                <TableColumn editable="false" id="" minWidth="10.0" prefWidth="394.0" sortable="true" styleClass="tableRow" text="%Button.PublicCode" fx:id="publicCodeColumn" />
-                <TableColumn editable="false" minWidth="10.0" prefWidth="85.0" resizable="false" sortable="true" styleClass="tableRow" text="%Button.ContactVerified" fx:id="verificationStatusColumn" />
-                <TableColumn editable="false" id="" minWidth="10.0" prefWidth="62.0" resizable="false" sortable="false" styleClass="tableRow" text="%Button.ContactRemove" fx:id="removeContactColumn" />
+                <TableColumn id="" minWidth="10.0" prefWidth="106.0" sortable="true" styleClass="tableColumn" text="%Button.ContactName" fx:id="contactNameColumn" />
+                <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="160.0" styleClass="tableColumn" text="%Button.SendToByDefault" fx:id="sendToByDefaultColumn" />
+                <TableColumn editable="false" id="" minWidth="10.0" prefWidth="394.0" sortable="true" styleClass="tableColumn" text="%Button.PublicCode" fx:id="publicCodeColumn" />
+                <TableColumn editable="false" minWidth="10.0" prefWidth="85.0" resizable="false" sortable="true" styleClass="tableColumn" text="%Button.ContactVerified" fx:id="verificationStatusColumn" />
+                <TableColumn editable="false" id="" minWidth="10.0" prefWidth="62.0" resizable="false" sortable="false" styleClass="tableColumn" text="%Button.ContactRemove" fx:id="removeContactColumn" />
               </columns>
             </TableView>
           </children>
