--- a/martus-client/source/org/martus/client/swingui/jfx/generic/DialogWithCloseShell.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/DialogWithCloseShell.fxml
@@ -8,7 +8,7 @@
    <bottom>
       <HBox alignment="BOTTOM_RIGHT" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onMouseClicked="#onCloseClicked" text="%Button.ok" />
+            <Button mnemonicParsing="false" onMouseClicked="#onCloseClicked" text="%Button.ok" styleClass="button-green" />
          </children>
       </HBox>
    </bottom>
