--- a/martus-client/source/org/martus/client/swingui/jfx/generic/FxBusy.fxml
+++ b/martus-client/source/org/martus/client/swingui/jfx/generic/FxBusy.fxml
@@ -10,6 +10,6 @@
   <children>
     <Label styleClass="headingLevel3"  fx:id="fxLabel" text="" textAlignment="CENTER" wrapText="true" />
     <ProgressBar fx:id="fxProgressBar" disable="false" prefHeight="24.0" prefWidth="360.0" progress="0.0" />
-    <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelPressed" text="%Button.cancel" />
+    <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelPressed" text="%Button.cancel" styleClass="button-gray" />
   </children>
 </VBox>
